--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.github-glitchenzo.nugetforunity": "4.1.1",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
@@ -47,8 +49,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.github-glitchenzo.nugetforunity": "4.1.1"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
